fixing layout and scrollbar

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -28,6 +28,9 @@
 }
 
 .station-index-route {
+    max-height: 82vh;
+    overflow-y: scroll;
+    
     // background-color: #121212;
     grid-area: main;
     align-items: center;
